--- a/NewKidsActivityProject/bin/NewKidsActivityProject.dll.config
+++ b/NewKidsActivityProject/bin/NewKidsActivityProject.dll.config
@@ -8,8 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-   <connectionStrings>
+  <connectionStrings>
     <add name="ActivityContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDBFilename=|DataDirectory|MINIPROJECT.mdf;Initial Catalog=MINIPROJECT;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="MINIPROJECTEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MINIPROJECT.mdf;initial catalog=MINIPROJECT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
