--- a/NewKidsActivityProject/NewKidsActivityProject.csproj
+++ b/NewKidsActivityProject/NewKidsActivityProject.csproj
@@ -221,9 +221,9 @@
     <Content Include="Views\Activity\ActivityName.cshtml" />
     <Content Include="Views\Kid\AllKids.cshtml" />
     <Content Include="Views\Kid\KidDetails.cshtml" />
-    <Content Include="Views\Kid\DropDownRemoveChild.cshtml" />
     <Content Include="Views\Activity\EnrollmentsForActivity.cshtml" />
     <Content Include="Views\Activity\Enrollments.cshtml" />
+    <Content Include="Views\Kid\RemoveChild.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
