Activity drop down now working. And now for some lunch!!

--- a/NewKidsActivityProject/NewKidsActivityProject.csproj
+++ b/NewKidsActivityProject/NewKidsActivityProject.csproj
@@ -218,12 +218,15 @@
     <Content Include="Views\Kid\Edit.cshtml" />
     <Content Include="Views\Kid\Index.cshtml" />
     <Content Include="Views\Activity\AllActivities.cshtml" />
-    <Content Include="Views\Activity\ActivityName.cshtml" />
+    <Content Include="Views\Activity\ActivityDetails.cshtml" />
     <Content Include="Views\Kid\AllKids.cshtml" />
     <Content Include="Views\Kid\KidDetails.cshtml" />
     <Content Include="Views\Activity\EnrollmentsForActivity.cshtml" />
     <Content Include="Views\Activity\Enrollments.cshtml" />
     <Content Include="Views\Kid\RemoveChild.cshtml" />
+    <Content Include="Views\Activity\RemoveActivity.cshtml" />
+    <Content Include="Views\Kid\EditChild.cshtml" />
+    <Content Include="Views\Activity\EditActivity.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
