--- a/NewKidsActivityProject/NewKidsActivityProject.csproj
+++ b/NewKidsActivityProject/NewKidsActivityProject.csproj
@@ -147,7 +147,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="App_Start\SwaggerConfig.cs" />
+    <Compile Include="App_Start\Swagger.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ActivityAPIController.cs" />
     <Compile Include="Controllers\ActivityController.cs" />
