--- a/NewKidsActivityProject/NewKidsActivityProject.csproj
+++ b/NewKidsActivityProject/NewKidsActivityProject.csproj
@@ -228,6 +228,7 @@
     <Content Include="Views\Kid\EditChild.cshtml" />
     <Content Include="Views\Activity\EditActivity.cshtml" />
     <Content Include="Views\Enrollment\EditEnrollment.cshtml" />
+    <Content Include="Views\Enrollment\DeleteEnrollment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
