--- a/NewKidsActivityProject/NewKidsActivityProject.csproj
+++ b/NewKidsActivityProject/NewKidsActivityProject.csproj
@@ -229,6 +229,7 @@
     <Content Include="Views\Activity\EditActivity.cshtml" />
     <Content Include="Views\Enrollment\EditEnrollment.cshtml" />
     <Content Include="Views\Enrollment\DeleteEnrollment.cshtml" />
+    <Content Include="Views\Kid\ConfirmNonDuplicate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
