--- a/NewKidsActivityProject/NewKidsActivityProject.csproj
+++ b/NewKidsActivityProject/NewKidsActivityProject.csproj
@@ -204,9 +204,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Activity\Create.cshtml" />
     <Content Include="Views\Activity\Delete.cshtml" />
-    <Content Include="Views\Activity\Details.cshtml" />
     <Content Include="Views\Activity\Edit.cshtml" />
-    <Content Include="Views\Activity\Index.cshtml" />
     <Content Include="Views\Enrollment\Create.cshtml" />
     <Content Include="Views\Enrollment\Delete.cshtml" />
     <Content Include="Views\Enrollment\Details.cshtml" />
@@ -214,9 +212,7 @@
     <Content Include="Views\Enrollment\Index.cshtml" />
     <Content Include="Views\Kid\Create.cshtml" />
     <Content Include="Views\Kid\Delete.cshtml" />
-    <Content Include="Views\Kid\Details.cshtml" />
     <Content Include="Views\Kid\Edit.cshtml" />
-    <Content Include="Views\Kid\Index.cshtml" />
     <Content Include="Views\Activity\AllActivities.cshtml" />
     <Content Include="Views\Activity\ActivityDetails.cshtml" />
     <Content Include="Views\Kid\AllKids.cshtml" />
@@ -229,7 +225,9 @@
     <Content Include="Views\Activity\EditActivity.cshtml" />
     <Content Include="Views\Enrollment\EditEnrollment.cshtml" />
     <Content Include="Views\Enrollment\DeleteEnrollment.cshtml" />
-    <Content Include="Views\Kid\ConfirmNonDuplicate.cshtml" />
+    <Content Include="Views\Kid\Duplicate.cshtml" />
+    <Content Include="Views\Activity\Duplicate.cshtml" />
+    <Content Include="Views\Enrollment\Duplicate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
