--- a/NewKidsActivityProject/NewKidsActivityProject.csproj
+++ b/NewKidsActivityProject/NewKidsActivityProject.csproj
@@ -209,7 +209,6 @@
     <Content Include="Views\Enrollment\Delete.cshtml" />
     <Content Include="Views\Enrollment\Details.cshtml" />
     <Content Include="Views\Enrollment\Edit.cshtml" />
-    <Content Include="Views\Enrollment\Index.cshtml" />
     <Content Include="Views\Kid\Create.cshtml" />
     <Content Include="Views\Kid\Delete.cshtml" />
     <Content Include="Views\Kid\Edit.cshtml" />
@@ -228,6 +227,7 @@
     <Content Include="Views\Kid\Duplicate.cshtml" />
     <Content Include="Views\Activity\Duplicate.cshtml" />
     <Content Include="Views\Enrollment\Duplicate.cshtml" />
+    <Content Include="Views\Enrollment\EnrollChild.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
