Azure db working - alleluia!!

--- a/NewKidsActivityProject/Web.config
+++ b/NewKidsActivityProject/Web.config
@@ -9,8 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ActivityContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDBFilename=|DataDirectory|CONTAINER.mdf;Initial Catalog=CONTAINER;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <add name="MINIPROJECTEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MINIPROJECT.mdf;initial catalog=MINIPROJECT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="ActivityContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDBFilename=|DataDirectory|CONTAINER.mdf;Initial Catalog=CONTAINER;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="MINIPROJECTEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MINIPROJECT.mdf;initial catalog=MINIPROJECT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DAL.ActivityContext" connectionString="Server=tcp:hdipminiproject.database.windows.net,1433;Database=HDipMiniProject;User ID=alang@hdipminiproject;Password=10Bananas;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <!--<add name="MINIPROJECTEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:hdipproject.database.windows.net,1433;Database=ActivityProjectDb;User ID=team@hdipproject;Password=10Oranges;Encrypt=True;TrustServerCertificate=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -74,11 +76,11 @@
   </system.codedom>
   <entityFramework>
     <!--- include following code to get EF to use the ActivityInitializer class-->
-    <contexts>
+    <!--<contexts>
       <context type="NewKidsActivityProject.DAL.ActivityContext, NewKidsActivityProject">
         <databaseInitializer type="NewKidsActivityProject.DAL.ActivityInitializer, NewKidsActivityProject" />
       </context>
-    </contexts>
+    </contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
